@@ -374,10 +374,10 @@
         <div id = "calendar"> </div>
         <button id = "arrowContainerBtn"><div id = "formArrow"></div></button>
         <div class = "container" id = "formcontainer">
+            <div><button type = "reset" class = "btn btn-danger" id = "clearTruckFormBtn" style = "width: 100%;">Reset Form</button></div>
             <div id = "dateAlert" class="alert alert-primary" role="alert">
                 Date Alert
             </div>
-            <button type = "reset" class = "btn btn-danger" id = "clearTruckFormBtn">Reset Form</button>
             <form id = "newTruckForm">
                 <div class="form-group">
                  <div class="btn-group" role="group">
