@@ -5,6 +5,7 @@ BETA 2.7
 	- Resolving a shipment now includes data about who did it/when it was resolved and gives the option to make a note about it when
 	  it has been resolved
 	- Added support for multiple lines in notes (previously did not format as expected)
+	- Moved reset button
 /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 BETA 2.6
 	- Added ability to remove and add paperwork to an existing appointents. This means are now fully editable...
